Fixed settings page layout on mobile devices.

--- a/Demo-v2_ESP/SD/styles.css
+++ b/Demo-v2_ESP/SD/styles.css
@@ -25,7 +25,9 @@
 .control-table th, .control-table td {
   padding: 3px;
 }
-
+input[type="checkbox"] {
+  float: left;
+}
 .status-unknown {
   font-weight: bold;
   color: lightgray;
